added app.js style.css and added buttons/event listeners

--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 <head>
     <title>Rock Paper Scissors</title>
     <meta charset="UTF-8" />
+    <link rel='stylesheet' href='style.css'>
 </head>
 <body>
+    <div>
+        <div>
+            <h1>Welcome to the rock, paper, scissors game</h1>
+        </div>
+
+        <div>
+            <button type='button' class='rock'>Rock</button>
+            <button type='button' class='paper'>Paper</button>
+            <button type='button' class='scissors'>Scissors</button>
+
+        </div>
+    </div>
+    <script src='app.js'>
+    </script>
+</body>
+</html>
+
+
+
+<!---
+
 <script>
     let playerWins = 0;
     let computerWins = 0;
@@ -60,5 +82,4 @@
     }
     game()
 </script>
-</body>
-</html>
+-->
