when button is clicked text is replaced, not appended to screen

--- a/index.html
+++ b/index.html
@@ -17,7 +17,16 @@
             <button type='button' class='scissors'>Scissors</button>
 
         </div>
+
+        <div id='results'>
+
+        </div>
+
+        <div id='runningscore'>
+
+        </div>
     </div>
+
     <script src='app.js'>
     </script>
 </body>
