--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button type='button' class='rock'>Rock</button>
             <button type='button' class='paper'>Paper</button>
             <button type='button' class='scissors'>Scissors</button>
-
+            <button type='button' class='playagain'>Play Again</button>
         </div>
 
         <div id='results'>
