added font and background image

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 <body>
     <div>
         <div>
-            <h1>Welcome to the rock, paper, scissors game</h1>
+            <h1 id='welcome'>Welcome to the rock, paper, scissors game</h1>
+            <h4 id='firstToFiveMessage'>The Winner is First to 5 Points</h2>
         </div>
 
-        <div>
+        <div id='buttonContainer'>
             <button type='button' class='rock'>Rock</button>
             <button type='button' class='paper'>Paper</button>
             <button type='button' class='scissors'>Scissors</button>
