--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
-    <div>
+    <div id='wrapper'>
         <div>
             <h1 id='welcome'>Welcome to the rock, paper, scissors game</h1>
             <h4 id='firstToFiveMessage'>The Winner is First to 5 Points</h2>
