--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </div>
 
         <div id='buttonContainer'>
+            <h1 id='playerTitle'>You</h1>
             <button type='button' class='rock'>Rock</button>
             <button type='button' class='paper'>Paper</button>
             <button type='button' class='scissors'>Scissors</button>
