adjusting css so elements will scale properly. playerContainer and welcome messages are mostly right.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 <body>
     <div id='wrapper'>
         <div>
-            <h1 id='welcome'>Welcome to the rock, paper, scissors game</h1>
-            <h4 id='firstToFiveMessage'>The Winner is First to 5 Points</h2>
+            <h1 id='welcome'>Welcome to the rock, paper, scissors game<br><small id='firstToFiveMessage'>The Winner is First to 5 Points</small></h1>
         </div>
 
         <div id='buttonContainer'>
@@ -17,6 +16,16 @@
             <button type='button' class='rock'>Rock</button>
             <button type='button' class='paper'>Paper</button>
             <button type='button' class='scissors'>Scissors</button>
+        </div>
+
+        <div id='computerContainer'>
+            <h1 id='computerTitle'>Computer</h1>
+            <button type='button' class='computerRock'>Rock</button>
+            <button type='button' class='computerPaper'>Paper</button>
+            <button type='button' class='computerScissors'>Scissors</button>
+        </div>
+
+        <div>
             <button type='button' class='playagain'>Play Again</button>
         </div>
 
