added background image for rock button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
 
         <div id='buttonContainer'>
             <h1 id='playerTitle'>You</h1>
-            <button type='button' class='rock'>Rock</button>
+            <div class='rock'>
+                <button type='button'>
+                    <img src='202-2025619_rock-paper-scissors-png-transparent-png.png' id='rockimage'>
+                </button>
+                <h3>Rock</h3>
+            </div>
             <button type='button' class='paper'>Paper</button>
             <button type='button' class='scissors'>Scissors</button>
         </div>
