--- a/index.html
+++ b/index.html
@@ -9,26 +9,27 @@
     <div id='titleContainer'>
         <h1 id='welcome'>Welcome to the rock, paper, scissors game</h1>
         <p id='firstToFiveMessage'>The Winner is First to 5 Points</p>
+        <h1 id='chooseTitle'>Choose Rock, Paper, or Scissors</h1>
     </div>
     <div class='game-wrapper'>
         <div id='buttonContainer'>
-            <h1 id='playerTitle'>You</h1>
             <div class='rock'>
                 <button type='button' id='rockButton'>
-                    <img src='202-2025619_rock-paper-scissors-png-transparent-png.png' id='rockimage'>
+                    <img src='st,small,507x507-pad,600x600,f8f8f8 (1).jpg' id='rockimage'>
                 </button>
             </div>
-            <h3 id='playerRockTitle'>Rock</h3>
-            <button type='button' class='paper'>Paper</button>
-            <button type='button' class='scissors'>Scissors</button>
+            <div class='paper'>
+                <button type='button' id='paperButton'>
+                    <img id='paperimage' src='st,small,507x507-pad,600x600,f8f8f8 (2).jpg'>
+                </button>
+            </div>
+            <div class='scissors'>
+                <button type='button' id='scissorsButton'>
+                    <img id='scissorsimage' src='st,small,507x507-pad,600x600,f8f8f8.jpg'>
+                </button>
+            </div>
         </div>
 
-        <div id='computerContainer'>
-            <h1 id='computerTitle'>Computer</h1>
-            <button type='button' class='computerRock'>Rock</button>
-            <button type='button' class='computerPaper'>Paper</button>
-            <button type='button' class='computerScissors'>Scissors</button>
-        </div>
 
         <div>
             <button type='button' class='playagain'>Play Again</button>
