putting images into fl flex container

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1 id='chooseTitle'>Choose Rock, Paper, or Scissors</h1>
     </div>
     <div class='game-wrapper'>
-        <div id='buttonContainer'>
+        <div class='buttonContainer'>
             <div class='rock'>
                 <button type='button' id='rockButton'>
                     <img src='st,small,507x507-pad,600x600,f8f8f8 (1).jpg' id='rockimage'>
