--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <title>Rock Paper Scissors</title>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width">
     <link rel='stylesheet' href='style.css'>
 </head>
 <body>
-    <div id='titleContainer'>
-        <h1 id='welcome'>Welcome to the rock, paper, scissors game</h1>
-        <p id='firstToFiveMessage'>The Winner is First to 5 Points</p>
-        <h1 id='chooseTitle'>Choose Rock, Paper, or Scissors</h1>
-    </div>
     <div class='game-wrapper'>
+        <div id='titleContainer'>
+            <h1 id='welcome'>Welcome to the rock, paper, scissors game</h1>
+            <p id='firstToFiveMessage'>The Winner is First to 5 Points</p>
+            <p id='chooseTitle'>Choose Rock, Paper, or Scissors</p>
+        </div>
         <div class='buttonContainer'>
             <div class='rock'>
                 <button type='button' id='rockButton'>
@@ -30,18 +30,19 @@
                 </button>
             </div>
         </div>
+        <div class = 'bottomScoreText'>
+            <div id='results'>
 
+            </div>
 
-        <div>
-            <button type='button' class='playagain'>Play Again</button>
-        </div>
+            <div id='runningscore'>
 
-        <div id='results'>
-
-        </div>
-
-        <div id='runningscore'>
-
+            </div>
+            <div>
+                <button type='button' class='playagain'>
+                    <img src='unnamed.png' id='replayImage'>
+                </button>
+            </div>
         </div>
     </div>
 
