--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div id='runningscore'>
 
             </div>
-            <div>
+            <div id='replay'>
                 <button type='button' class='playagain'>
                     <img src='unnamed.png' id='replayImage'>
                 </button>
